src/content/docs/sdk/cordova/v5/features/preinstalled.mdx
---
title: Send preinstalled app activity
description: Configure a campaign to send information from preinstalled apps.
slug: en/sdk/cordova/features/preinstalled
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/cordova/v4/features/preinstalled
---

<CodeBlock title="Method signature">

```ts
enablePreinstallTracking(): void
```

</CodeBlock>

You can use the Adjust SDK to record activity from apps that came preinstalled on a user's device. This enables you to send information from users who didn't download your app from a campaign.

To enable preinstall measurement, call the `enablePreinstallTracking` method of your config object.

```js
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.enablePreinstallTracking();

Adjust.initSdk(adjustConfig);
```

## Default link token {#default-link-token}

<CodeBlock title="Method signature">

```ts
setDefaultTracker(defaultTracker: string): void
```

</CodeBlock>

Configuring a default link token enables you to attribute all preinstalls to a predefined Adjust link. Adjust records all information against this token until the attribution source changes. To set this up:

1. [Create a new campaign link in Campaign Lab](https://help.adjust.com/en/article/links).

   ```text
   https://app.adjust.com/{token}
   ```

2. Copy this token and assign it to the [`defaultTracker` property](/en/sdk/cordova/configuration#set-default-link-token) of your config object.

   ```js
   const adjustConfig = new AdjustConfig(
      "{YourAppToken}",
      AdjustConfig.EnvironmentSandbox,
   );

   adjustConfig.setDefaultTracker("{TrackerToken}");

   Adjust.initSdk(adjustConfig);
   ```

3. Build and run your app. If you have logging enabled, you should see a message in your log

   ```text
   Default tracker: 'abc123'.
   ```
